清理binlog时睡眠1s

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,22 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) mysql",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "/home/leon/dbug/mysql-server-mysql-5.7.32/cmake-build-debug/build/client/mysql",
-            "args": [
-                "--help"
-                ],
-            "stopAtEntry": false,
-            "cwd": "/data/3306/mysql5",
-            // "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-        },
-        {
-            "name": "(gdb) mysqld",
+            "name": "(gdb) server",
             "type": "cppdbg",
             "request": "launch",
             "program": "/home/leon/dbug/mysql-server-mysql-5.7.32/cmake-build-debug/build/sql/mysqld",
@@ -34,7 +19,21 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
+        },
+        {
+            "name": "(gdb) client",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "/home/leon/dbug/mysql-server-mysql-5.7.32/cmake-build-debug/build/client/mysql",
+            "args": [
+                "--help"
+                ],
+            "stopAtEntry": false,
+            "cwd": "/data/3306/mysql5",
+            // "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
         }
-
     ]
 }
