在general_log中添加user和ip函数，但是无法记录到binlog中

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
     "files.associations": {
         "*.py ": "python",
         "cstdlib": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "*.ic": "cpp"
     },
     "commentTranslate.source": "DarkCWK.youdao-youdao",
  
